@@ -1,3 +1,11 @@
+2004-07-13  Jay Rossiter <cryptographite@users.sf.net>  1.4.4-RC2-cvs-b15
+
+	* Change: Give clickable dimensions their own table row so that they
+	  don't end up in a situation where they're *beside* the image
+
+	* Change: $album->save() after rehighlight in makeThumbnail() so new size is saved.
+	  (by mindless)
+
 2004-07-14  Jens A. Tkotz <jens@peino.de>  1.4.4-RC2-cvs-b14
 
 	Fix: Use getImagePath for voting result bars.
